--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_blue_plus: ^1.4.0
   permission_handler: ^10.2.0
+  intl: ^0.18.1
+  shared_preferences: ^2.1.0
+  http: ^0.13.5
+  image_picker: ^0.8.7+4
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/scmfp.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
